--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Alelabs - Networking solutions in Kigali</title>
+    <title>Alelabs - Professional IT & Network Solutions in Kigali, Rwanda</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="CCTV installation, network solutions, computer lab setup, IT services, WiFi installation, security systems, Kigali, Rwanda" name="keywords">
+    <meta content="Alelabs Tech provides professional IT solutions including CCTV installation, network setup, and computer lab services in Kigali, Rwanda. 24/7 support available." name="description">
+    <meta name="author" content="Alelabs Tech">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Alelabs - Professional IT & Network Solutions in Kigali">
+    <meta property="og:description" content="Expert CCTV installation, network solutions, and computer lab setup services in Kigali, Rwanda. Available 24/7.">
+    <meta property="og:image" content="img/cctvbg.jpg">
+    <meta property="og:url" content="https://alelabs.tech">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -76,9 +83,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
+                    <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="service.html" class="nav-item nav-link">Our Services</a>
-                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                    <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
@@ -408,7 +416,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
