--- a/pricing.html
+++ b/pricing.html
@@ -101,6 +101,7 @@
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="service.html" class="nav-item nav-link">Our Services</a>
                     <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
@@ -130,31 +131,31 @@
                     <div class="price-item bg-light rounded">
                         <div class="border-bottom p-4 mb-4">
                             <h4 class="text-primary mb-1">CCTV Installation</h4>
-                            <h5 class="mb-0">Starting from</h5>
+                            <h5 class="mb-0">Home Package</h5>
                         </div>
                         <div class="p-4 pt-0">
                             <h1 class="display-5 mb-3">
-                                <small class="align-top" style="font-size: 22px; line-height: 45px;">Rwf</small>250,000
-                                <small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Setup</small>
+                                <small class="align-top" style="font-size: 22px; line-height: 45px;">Rwf</small>276,000
+                                <small class="align-bottom" style="font-size: 16px; line-height: 40px;">/Setup</small>
                             </h1>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>Basic Package</span>
+                                <span>2 indoor & 2 outdoor cameras</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>2 HD Cameras</span>
+                                <span>4 HD Cameras</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>NVR System</span>
+                                <span>DVR System</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-3">
-                                <span>Basic Installation</span>
+                                <span>Full Installation</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <div class="d-flex justify-content-between mb-2">
-                                <span>1 Month Support</span>
+                                <span>3 Months Support</span>
                                 <i class="fa fa-check text-success pt-1"></i>
                             </div>
                             <a href="contact.html" class="btn btn-primary py-3 px-5 mt-4">Get Started</a>
@@ -233,17 +234,53 @@
                         </div>
                     </div>
                 </div>
+                <!-- Other Services -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
+                    <div class="price-item bg-light rounded">
+                        <div class="border-bottom p-4 mb-4">
+                            <h4 class="text-primary mb-1">Other Services</h4>
+                            <h5 class="mb-0">Custom Solutions</h5>
+                        </div>
+                        <div class="p-4 pt-0">
+                            <h1 class="display-5 mb-3">
+                                <small class="align-top" style="font-size: 22px; line-height: 45px;">Rwf</small>Custom
+                                <small class="align-bottom" style="font-size: 16px; line-height: 40px;">/ Project</small>
+                            </h1>
+                            <div class="d-flex justify-content-between mb-3">
+                                <span>Network Extension</span>
+                                <i class="fa fa-check text-success pt-1"></i>
+                            </div>
+                            <div class="d-flex justify-content-between mb-3">
+                                <span>Computer Services</span>
+                                <i class="fa fa-check text-success pt-1"></i>
+                            </div>
+                            <div class="d-flex justify-content-between mb-3">
+                                <span>Technical Network Issues</span>
+                                <i class="fa fa-check text-success pt-1"></i>
+                            </div>
+                            <div class="d-flex justify-content-between mb-3">
+                                <span>Custom Solutions</span>
+                                <i class="fa fa-check text-success pt-1"></i>
+                            </div>
+                            <div class="d-flex justify-content-between mb-2">
+                                <span>Tailored Support</span>
+                                <i class="fa fa-check text-success pt-1"></i>
+                            </div>
+                            <a href="#custom-quote" class="btn btn-primary py-3 px-5 mt-4" onclick="scrollToQuote(event)">Get Started</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
     <!-- Pricing End -->
 
     <!-- Contact Start -->
-    <div class="container-xxl py-5">
+    <div id="custom-quote" class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h1 class="text-primary mb-3">Need a Custom Quote?</h1>
-                <p class="mb-4">Contact us for a personalized solution that fits your needs</p>
+                <p class="mb-4">Contact us for a personalized solution that fits your needs. For other services, please describe your requirements in detail.</p>
             </div>
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -262,10 +299,11 @@
                                         <option value="CCTV Installation">CCTV Installation</option>
                                         <option value="Network Solutions">Network Solutions</option>
                                         <option value="Computer Lab Setup">Computer Lab Setup</option>
+                                        <option value="Other Services">Other Services</option>
                                     </select>
                                 </div>
                                 <div class="col-12">
-                                    <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements" required></textarea>
+                                    <textarea name="requirements" class="form-control border-0" rows="4" placeholder="Tell us about your requirements or specific service needs" required></textarea>
                                 </div>
                                 <div class="col-12">
                                     <button class="btn btn-primary w-100 py-3" type="submit">Request Quote</button>
@@ -287,7 +325,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -357,6 +395,19 @@
             emailjs.init("aTplpx662MEXiSJE5");
         })();
 
+        // Smooth scroll to quote section
+        function scrollToQuote(event) {
+            event.preventDefault();
+            const quoteSection = document.getElementById('custom-quote');
+            quoteSection.scrollIntoView({ behavior: 'smooth' });
+            
+            // Pre-select "Other Services" in the dropdown
+            const serviceSelect = document.querySelector('select[name="service"]');
+            if (serviceSelect) {
+                serviceSelect.value = 'Other Services';
+            }
+        }
+
         // Handle modal package selection
         $('#bookingModal').on('show.bs.modal', function (event) {
             var button = $(event.relatedTarget);
@@ -388,7 +439,7 @@
             };
 
             const adminParams = {
-                to_email: 'alelabsservices@gmail.com',
+                to_email: 'customers@alelabs.tech',
                 subject: 'New Service Booking',
                 message: `New booking received:\n\n` +
                         `Package: ${document.getElementById('package').value}\n` +
@@ -400,24 +451,17 @@
                 type: 'admin_notification'
             };
 
-            Promise.all([
-                emailjs.send('service_l32v4u9', 'template_kruo6lo', templateParams),
-                emailjs.send('service_l32v4u9', 'template_kruo6lo', adminParams)
-            ])
-                .then(function(responses) {
-                    alert('Booking submitted successfully! We will contact you shortly.');
-                    $('#bookingModal').modal('hide');
-                    document.getElementById('service-booking-form').reset();
-                })
-                .catch(function(error) {
-                    alert('Sorry, there was an error. Please try again later.');
-                    console.error('Error:', error);
-                })
-                .finally(function() {
+            emailjs.send("aTplpx662MEXiSJE5", "template_id", templateParams, adminParams)
+                .then(function(response) {
                     submitButton.disabled = false;
-                    submitButton.textContent = 'Confirm Booking';
+                    submitButton.textContent = 'Request Sent';
+                    // Optionally, you can show a success message to the user
+                }, function(error) {
+                    submitButton.disabled = false;
+                    submitButton.textContent = 'Request Error';
+                    // Optionally, you can show an error message to the user
                 });
         });
     </script>
 </body>
-</html> 
+</html>
