--- a/service.html
+++ b/service.html
@@ -3,10 +3,17 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Alelabs - Networking solutions in Kigali</title>
+    <title>IT Services in Kigali - CCTV, Network & Computer Lab Solutions | Alelabs</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
+    <meta content="IT services Kigali, CCTV installation Rwanda, network solutions, computer lab setup, WiFi installation, IT support Rwanda" name="keywords">
+    <meta content="Professional IT services in Kigali including CCTV installation, network solutions, and computer lab setup. Expert technicians and 24/7 support available." name="description">
+    <meta name="author" content="Alelabs Tech">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Professional IT Services in Kigali - Alelabs Tech">
+    <meta property="og:description" content="Expert IT services including CCTV installation, network solutions, and computer lab setup in Kigali. 24/7 support available.">
+    <meta property="og:image" content="img/wifirouter.jpg">
+    <meta property="og:url" content="https://alelabs.tech/service.html">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
@@ -77,8 +84,9 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="service.html" class="nav-item nav-link active">Our Services</a>
-                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
+                    <a href="service.html" class="nav-item nav-link">Our Services</a>
+                    <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
@@ -320,7 +328,7 @@
                     <h4 class="text-light mb-4">Address</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
