--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,9 @@
                 <div class="navbar-nav me-auto">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="service.html" class="nav-item nav-link">Our Services</a>
-                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
-                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
+                    <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
+                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
@@ -148,7 +149,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h5 class="text-primary">Email Us</h5>
-                                    <p class="mb-0">alelabsservices@gmail.com</p>
+                                    <p class="mb-0">customers@alelabs.tech</p>
                                 </div>
                             </div>
                             <div class="d-flex">
@@ -208,9 +209,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi, Kigali, RWANDA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Gisozi Gasabo, Kigali, RWANDA</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+250 788 612171</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>alelabsservices@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>customers@alelabs.tech</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
