--- a/contact.html
+++ b/contact.html
@@ -158,8 +158,9 @@
                                 </div>
                                 <div class="ms-3">
                                     <h5 class="text-primary">Working Hours</h5>
-                                    <p class="mb-0">Monday - Friday: 8:00 AM - 6:00 PM</p>
-                                    <p class="mb-0">Saturday: 9:00 AM - 4:00 PM</p>
+                                    <p class="mb-0">Monday - Friday: 5:00 PM - 9:00 PM</p>
+                                    <p class="mb-0">Saturday: 3:00 PM - 9:00 PM</p>
+                                    <p class="mb-0">Saturday: 3:00 PM - 9:00 PM</p>
                                 </div>
                             </div>
                         </div>
