--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
                     <a class="btn btn-link" href="">Internet connectivity</a>
                     <a class="btn btn-link" href="">Computer labs</a>
                     <a class="btn btn-link" href="">Computer labs maintenance</a>
+                    <a class="btn btn-link" href="">Websites Developing</a>
                 </div>
             </div>
         </div>
