--- a/service.html
+++ b/service.html
@@ -133,6 +133,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s" id="networking">
                     <div class="service-item bg-light rounded">
                         <div class="overflow-hidden">
@@ -164,6 +165,25 @@
                                 <li><i class="fa fa-check text-success me-2"></i>Network configuration</li>
                                 <li><i class="fa fa-check text-success me-2"></i>Software setup</li>
                                 <li><i class="fa fa-check text-success me-2"></i>Regular maintenance</li>
+                            </ul>
+                            <a href="contact.html" class="btn btn-primary">Get Quote</a>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s" id="lab">
+                    <div class="service-item bg-light rounded">
+                        <div class="overflow-hidden">
+                            <img class="img-fluid w-100" src="img/lab2 (1).jpg" alt="Computer Lab Setup">
+                        </div>
+                        <div class="p-4">
+                            <h4 class="mb-3">Website mentainance and Developing</h4>
+                            <p>Complete websites developing and maintenance:</p>
+                            <ul class="list-unstyled">
+                                <li><i class="fa fa-check text-success me-2"></i>Full website designing</li>
+                                <li><i class="fa fa-check text-success me-2"></i>Search Engine Optimization</li>
+                                <li><i class="fa fa-check text-success me-2"></i>12 months free mentainance</li>
+                                <li><i class="fa fa-check text-success me-2"></i>12 months hosting</li>
                             </ul>
                             <a href="contact.html" class="btn btn-primary">Get Quote</a>
                         </div>
