--- a/pricing.html
+++ b/pricing.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -335,19 +335,15 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Thursday:</h6>
-                    <p class="mb-4">5.00 PM - 09.00 PM</p>
-                    <h6 class="text-light">Friday:</h6>
-                    <p class="mb-4">7.00 PM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">3.00 PM - 9.00 PM</p>
+                    <h6 class="text-light">Monday - Sunday:</h6>
+                    <p class="mb-4">08.00 AM - 07.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">CCTV Installation</a>
-                    <a class="btn btn-link" href="">Network Solutions</a>
-                    <a class="btn btn-link" href="">Computer Lab Setup</a>
-                    <a class="btn btn-link" href="">IT Support</a>
+                    <a class="btn btn-link" href="">CCTV systems installation</a>
+                    <a class="btn btn-link" href="">Computer lab maintenance</a>
+                    <a class="btn btn-link" href="">Networking solutions</a>
+                    <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
                 </div>
             </div>
