--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -158,9 +158,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h5 class="text-primary">Working Hours</h5>
-                                    <p class="mb-0">Monday - Friday: 5:00 PM - 9:00 PM</p>
-                                    <p class="mb-0">Saturday: 3:00 PM - 9:00 PM</p>
-                                    <p class="mb-0">Saturday: 3:00 PM - 9:00 PM</p>
+                                    <p class="mb-0">Monday - Sunday: 8:00 AM - 7:00 PM</p>
                                 </div>
                             </div>
                         </div>
@@ -222,17 +220,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Friday:</h6>
-                    <p class="mb-4">05.00 PM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">3.00 PM - 9.00 PM</p>
+                    <h6 class="text-light">Monday - Sunday:</h6>
+                    <p class="mb-4">08.00 AM - 07.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
                     <a class="btn btn-link" href="">CCTV systems installation</a>
                     <a class="btn btn-link" href="">Computer lab maintenance</a>
                     <a class="btn btn-link" href="">Networking solutions</a>
-                    <a class="btn btn-link" href="">Wordpress website</a>
                     <a class="btn btn-link" href="">Overall IT support</a>
                     <a class="btn btn-link" href="">Maintenance</a>
                 </div>
