--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/logo.jpg" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -426,20 +426,16 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Opening Hours</h4>
-                    <h6 class="text-light">Monday - Thursday:</h6>
-                    <p class="mb-4">5.00 PM - 09.00 PM</p>
-                     <h6 class="text-light">Friday:</h6>
-                    <p class="mb-4">7.00 PM - 09.00 PM</p>
-                    <h6 class="text-light">Saturday - Sunday:</h6>
-                    <p class="mb-0">3.00 PM - 9.00 PM</p>
+                    <h6 class="text-light">Monday - Sunday:</h6>
+                    <p class="mb-4">08.00 AM - 07.00 PM</p>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Services</h4>
-                    <a class="btn btn-link" href="">CCTV cameras</a>
-                    <a class="btn btn-link" href="">Internet connectivity</a>
-                    <a class="btn btn-link" href="">Computer labs</a>
-                    <a class="btn btn-link" href="">Computer labs maintenance</a>
-                    <a class="btn btn-link" href="">Websites Developing</a>
+                    <a class="btn btn-link" href="">CCTV systems installation</a>
+                    <a class="btn btn-link" href="">Computer lab maintenance</a>
+                    <a class="btn btn-link" href="">Networking solutions</a>
+                    <a class="btn btn-link" href="">Overall IT support</a>
+                    <a class="btn btn-link" href="">Maintenance</a>
                 </div>
             </div>
         </div>
