--- a/contact.html
+++ b/contact.html
@@ -78,9 +78,9 @@
                 <div class="navbar-nav me-auto">
                     <a href="index.html" class="nav-item nav-link">Home</a>
                     <a href="service.html" class="nav-item nav-link">Our Services</a>
-                    <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
                     <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-item nav-link active">Contact Us</a>
                 </div>
                 <div class="mt-4 mt-lg-0 me-lg-n4 py-3 px-4 bg-primary d-flex align-items-center">
                     <div class="d-flex flex-shrink-0 align-items-center justify-content-center bg-white" style="width: 45px; height: 45px;">
