--- a/service.html
+++ b/service.html
@@ -84,8 +84,8 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav me-auto">
                     <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="service.html" class="nav-item nav-link">Our Services</a>
-                    <a href="pricing.html" class="nav-item nav-link active">Pricing</a>
+                    <a href="service.html" class="nav-item nav-link active">Our Services</a>
+                    <a href="pricing.html" class="nav-item nav-link">Pricing</a>
                     <a href="guidelines.html" class="nav-item nav-link">Guidelines</a>
                     <a href="contact.html" class="nav-item nav-link">Contact Us</a>
                 </div>
