--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <meta property="og:image" content="img/cctvbg.jpg">
     <meta property="og:url" content="https://alelabs.tech">
     <meta name="twitter:card" content="summary_large_image">
+    <link rel="canonical" href="https://alelabs.tech/products.html">
+    <link rel="alternate" href="https://alelabs.tech/products.html" hreflang="en">
+    <meta property="og:see_also" content="https://alelabs.tech/products.html">
 
     <!-- Favicon -->
     <link href="img/logo.jpg" rel="icon">
